<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BiShengWang</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="register_phone">请输入11位手机号码</string>
    <string name="register_getyanzhenma">获取验证码</string>
    <string name="register_yanzhengma">输入验证码</string>
    <string name="register_miama">输入不少于6位数的密码</string>
    <string name="register_tishi">点击注册即表示同意</string>
    <string name="symbol">&#060;</string>
    <string name="symbol_two">&#062;</string>
    <string name="register_content">用户协议</string>
    <string name="register_weixin">微信登录</string>
    <string name="register_QQ">QQ登录</string>
    <string name="Login_mima">请输入密码</string>
    <string name="Login_wangjimima">忘记密码</string>
    <string name="Login_fankui">反馈</string>
    <string name="login_uploading_img">上传头像</string>
    <string name="login_uploading_img_two">真实头像更有机会被置顶</string>
    <string name="login_uploading_Name">输入昵称或真实名字</string>
    <string name="login_uploading_age">出生日期</string>
    <string name="login_uploading_wangcheng">完成</string>
    <string name="login_uploading_nan">男</string>
    <string name="login_uploading_nv">女</string>
    <string name="typographer_dizhi">东莞</string>
    <string name="typographer_titils">印刷商</string>
    <string name="typographer_paixu">综合排序</string>
    <string name="typographer_suaixuan">筛选</string>
    <string name="me_titls">我的</string>
    <string name="logo_titles">印刷高手</string>
    <string name="logo_titles2">在身边</string>
    <string name="main_me">活跃值</string>
    <string name="main_me_erweima">我的二维码</string>
    <string name="main_me_wodefabu">我的发布</string>
    <string name="main_me_frindes">我的好友</string>
    <string name="main_me_xiangce">相册</string>
    <string name="main_me_renzhengziliao">认证资料</string>
    <string name="main_me_mianfeituig">免费推广</string>
    <string name="main_me_tansuo">探索</string>
    <string name="main_me_shezhi">设置</string>
    <string name="main_me_wodesixin">我的私信</string>
    <string name="main_me_wodeliuyan">我的留言</string>
    <string name="main_me_woshicaigou">我是采购</string>
    <string name="main_me_woshiyinshuanren">我是印刷人</string>
    <string name="main_me_woshishejishi">我是设计师</string>
    <string name="mypublish_titles">我的发布</string>
    <string name="detailes_liuyan">留言</string>
    <string name="detailes_sixin">私信</string>
    <string name="detailes_tuijian">推荐</string>
    <string name="detailes_titles">详情</string>
    <string name="explore_wode">我的</string>
    <string name="explore_tansuo">探索</string>
    <string name="explore_xiaomishu">小秘书</string>
    <string name="explore_leidachazhaoren">雷达查找人</string>
    <string name="explore_shejishizhuanqu">设置师专区</string>
    <string name="publishdesignrequiremwet_titles">发布设计需求</string>
    <string name="publishdesignrequiremwet_biaoti">请输入标题,高价悬赏包装设计</string>
    <string name="publishdesignrequiremwet_shejixuqiu">请输入设计需求</string>
    <string name="publishdesignrequiremwet_xusahngjinre">悬赏金额</string>
    <string name="publishdesignrequiremwet_shulaing">数量</string>
    <string name="publishdesignrequiremwet_zhouqi">周期</string>
    <string name="publishdesignrequiremwet_gongzuori">工作日</string>
    <string name="publishdesignrequiremwet_tupian">添加3张图片或视频,就与机会被置顶。</string>
    <string name="publishdesignrequiremwet_yuyin">添加一段真实语音,信用度提高80%</string>
    <string name="publishdesignrequiremwet_fasong">发送</string>
	<string name="publishpurchase_titles">发布采购信息</string>
	<string name="publishpurchase_moban">使用模板</string>
	<string name="publishpurchase_fabushejixuqiu">发布设计需求</string>
	<string name="publishpurchase_biaoti">请输入标题,如我要印刷一批画册</string>
	<string name="publishpurchase_neirong">请输入文字内容,如规格材质,周期,工艺要求等</string>
	<string name="publishpurchase_kanguofabu">谁能看到我的发布</string>
	<string name="publishpurchase_lianxitishi">联系你的人会是你更想要找的人</string>
	<string name="publishpurchase_dingxiangshezhi">定向设置</string>
	<string name="zhaogaotianxia_fubu">发布</string>
	<string name="zhaogaotianxia_fubucagouxinxi">采购信息</string>
	<string name="zhaogaotianxia_gonfyingxinxi">供应信息</string>
	<string name="zhaogaotianxia_ershouxinxi">二手信息</string>
	<string name="zhaogaotianxia_qiuzhixinxi">求职信息</string>
	<string name="homepage_dongguan">东莞</string>
	<string name="homepage_shuaidan">甩单</string>
	<string name="homepage_qiudan">求单</string>
	<string name="homepage_paixu">综合排序</string>
	<string name="homepage_zuixin">最新</string>
	<string name="homepage_shuaixuan">筛选</string>
	<string name="homepage_quanbu">全部</string>
	
</resources>