<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/detailes_titles"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@color/textcoloryellow" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/homepage_dongguan"
            android:textColor="@color/textcolorback"
            android:textSize="@dimen/textsize14" />

        <RadioGroup
            android:layout_width="174dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:background="@drawable/homepage_radiogroup_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_radiobutton_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/homepage_shuaidan"
                android:textColor="@drawable/homepage_text_selector" />

            <RadioButton
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_radiobutton_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/homepage_quanbu"
                android:textColor="@drawable/homepage_text_selector" />

            <RadioButton
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_radiobutton_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/homepage_qiudan"
                android:textColor="@drawable/homepage_text_selector" />
        </RadioGroup>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/yudian" />
    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_centerInParent="true"
        android:background="@color/typograpter_radiogroup"
        android:gravity="center_vertical"
        android:orientation="horizontal"
       >

    
        <RadioButton
          
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/homepage_paixu_bg"
            android:gravity="center_vertical"
            android:text="@string/homepage_paixu"
            android:textColor="@drawable/homepage_paixu_text_bg" 
           
           />

        <RadioButton
          
            android:layout_width="0dp"
           android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/homepage_radiobutton_selector"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/homepage_paixu_bg"
            android:gravity="center"
            android:text="@string/homepage_zuixin"
            android:textColor="@drawable/homepage_paixu_text_bg"
           
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
          
            android:layout_height="wrap_content"
            android:background="@drawable/homepage_radiobutton_selector"
            android:button="@null"
            android:drawableRight="@drawable/homepage_paixu_bg"
            android:gravity="center_vertical"
            android:text="@string/homepage_shuaixuan"
            android:textColor="@drawable/homepage_paixu_text_bg" 
          
            />
    </RadioGroup>
</LinearLayout>