<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/main_me_bg">
    
    <RelativeLayout
        android:id="@+id/detailes_titles"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@color/textcoloryellow" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/btn_arrow_back" />
        <TextView 
           android:layout_toRightOf="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_wode"
            android:textSize="@dimen/textsize12"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            />
			
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/explore_tansuo"
            android:textSize="@dimen/textsize18" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/yudian" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:gravity="center_vertical"
        android:layout_marginTop="23dp"
        android:background="@drawable/main_me_line_bg">
      <ImageView 
          android:id="@+id/gao"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/gao"
          android:layout_marginLeft="15dp"/>  
      <TextView 
          android:layout_toRightOf="@id/gao"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/explore_xiaomishu"
          android:textSize="@dimen/textsize14"
          android:textColor="@color/explore_textcontent"
          android:layout_marginLeft="13dp"/>

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:scaleType="center"
          android:layout_alignParentRight="true"
          android:src="@drawable/arrow_r" 
          android:layout_marginRight="26dp"/>

    </RelativeLayout>
    
     <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:background="@drawable/main_me_line_bg">
      <ImageView 
          android:id="@+id/gao"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/icon_search"
          android:layout_marginLeft="15dp"/>  
      <TextView 
          android:layout_toRightOf="@id/gao"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/explore_leidachazhaoren"
          android:textSize="@dimen/textsize14"
          android:textColor="@color/explore_textcontent"
          android:layout_marginLeft="13dp"/>

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:scaleType="center"
          android:layout_alignParentRight="true"
          android:src="@drawable/arrow_r" 
          android:layout_marginRight="26dp"/>

    </RelativeLayout>
    
     
      <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:background="@drawable/main_me_line_bg">
      <ImageView 
          android:id="@+id/gao"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/chuang"
          android:layout_marginLeft="15dp"/>  
      <TextView 
          android:layout_toRightOf="@id/gao"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/explore_shejishizhuanqu"
          android:textSize="@dimen/textsize14"
          android:textColor="@color/explore_textcontent"
          android:layout_marginLeft="13dp"/>

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:scaleType="center"
          android:layout_alignParentRight="true"
          android:src="@drawable/arrow_r" 
          android:layout_marginRight="26dp"/>

    </RelativeLayout>

</LinearLayout>
